dev/scss/campaign.scss
/* Campaign Template */

:root {
  // campaign site color vars
  --cmpn_teal:      #{$c_primary-dark};
  --cmpn_paleteal:  color-mix(in lab, #{$c_primary-dark} 25%, #fff 100%);
  --cmpn_orange:    #{$c_accent-dark};
  --cmpn_link:      #{$c_primary-dark};
  --cmpn_hover:     #{$c_accent-dark};
  --cmpn_active:    #{$c_secondary-dark};
}

body.page-template-page_campaign-template {
  background: none; // override
  background-color: $c_white;
  color: $c_black;

  a {
    color: var(--cmpn_link);

    &:hover {
      color: var(--cmpn_hover);
    }

    &:active {
      color: var(--cmpn_active);
    }

  }

  button {
    background-color: var(--cmpn_link);

    &:hover {
      background-color: var(--cmpn_hover);
      color: $c_truewhite;
    }

    &:active {
      background-color: var(--cmpn_active);
      color: $c_truewhite;
    }

    &.cta {
      background-color: var(--cmpn_orange);
      color: $c_truewhite;

      &:hover {
        background-color: var(--cmpn_teal);
        color: $c_truewhite;
      }

      &:active {
        background-color: var(--cmpn_active);
        color: $c_truewhite;
      }

    }

  }

  .i_bluesky::before,
  .i_bluesky--after::after {
    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='10 9.65 580 510.68'%3E%3Cstyle%3E path%7Bfill:var(--cmpn_link)%7D %3C/style%3E%3Cpath d='M135.72 44.03C202.216 93.951 273.74 195.17 300 249.49c26.262-54.316 97.782-155.54 164.28-205.46C512.26 8.009 590-19.862 590 68.825c0 17.712-10.155 148.79-16.111 170.07-20.703 73.984-96.144 92.854-163.25 81.433 117.3 19.964 147.14 86.092 82.697 152.22-122.39 125.59-175.91-31.511-189.63-71.766-2.514-7.38-3.69-10.832-3.708-7.896-.017-2.936-1.193.516-3.707 7.896-13.714 40.255-67.233 197.36-189.63 71.766-64.444-66.128-34.605-132.26 82.697-152.22-67.108 11.421-142.55-7.45-163.25-81.433C20.15 217.613 9.997 86.535 9.997 68.825c0-88.687 77.742-60.816 125.72-24.795z'/%3E%3C/svg%3E%0A");
  }
  a.i_bluesky:hover::before,
  a.i_bluesky--after:hover::after {
    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='10 9.65 580 510.68'%3E%3Cstyle%3E path%7Bfill:var(--cmpn_hover)%7D %3C/style%3E%3Cpath d='M135.72 44.03C202.216 93.951 273.74 195.17 300 249.49c26.262-54.316 97.782-155.54 164.28-205.46C512.26 8.009 590-19.862 590 68.825c0 17.712-10.155 148.79-16.111 170.07-20.703 73.984-96.144 92.854-163.25 81.433 117.3 19.964 147.14 86.092 82.697 152.22-122.39 125.59-175.91-31.511-189.63-71.766-2.514-7.38-3.69-10.832-3.708-7.896-.017-2.936-1.193.516-3.707 7.896-13.714 40.255-67.233 197.36-189.63 71.766-64.444-66.128-34.605-132.26 82.697-152.22-67.108 11.421-142.55-7.45-163.25-81.433C20.15 217.613 9.997 86.535 9.997 68.825c0-88.687 77.742-60.816 125.72-24.795z'/%3E%3C/svg%3E%0A");
  }
  a.i_bluesky:active::before,
  a.i_bluesky--after:active::after {
    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='10 9.65 580 510.68'%3E%3Cstyle%3E path%7Bfill:var(--cmpn_active)%7D %3C/style%3E%3Cpath d='M135.72 44.03C202.216 93.951 273.74 195.17 300 249.49c26.262-54.316 97.782-155.54 164.28-205.46C512.26 8.009 590-19.862 590 68.825c0 17.712-10.155 148.79-16.111 170.07-20.703 73.984-96.144 92.854-163.25 81.433 117.3 19.964 147.14 86.092 82.697 152.22-122.39 125.59-175.91-31.511-189.63-71.766-2.514-7.38-3.69-10.832-3.708-7.896-.017-2.936-1.193.516-3.707 7.896-13.714 40.255-67.233 197.36-189.63 71.766-64.444-66.128-34.605-132.26 82.697-152.22-67.108 11.421-142.55-7.45-163.25-81.433C20.15 217.613 9.997 86.535 9.997 68.825c0-88.687 77.742-60.816 125.72-24.795z'/%3E%3C/svg%3E%0A");
  }

  // macro layout
  .total-wrapper {
    background: none; // override
  }

  .inner-wrapper {
    max-width: 1072px;
  }

  @media #{$mq_lg} {

    .inner-wrapper--at-lg {
      max-width: 1072px;
    }

  }

  // header
  .site-header {

    .site-header-primary {
      background: none; // override
      background-color: $c_truewhite;
      border-width: 0;
      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    }

    .site-header-secondary {
      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);

      a {
        border-width: 0;
      }

    }

    .header-logo a {
      border-width: 0; // override

      path {
        fill: var(--cmpn_link);
      }

      &:hover path {
        fill: var(--cmpn_hover);
      }

      &:active path {
        fill: var(--cmpn_active);
      }

    }

    .logo-supplement-header {
      display: inline-block;
      font-size: 1.875rem;
      margin-left: 0.375em;
    }

    .header-nav {

      > button {
        border-width: 0;

        &:not(:hover):not(:active) {
          color: var(--cmpn_link);
        }

      }

      > nav {
        background-color: $c_white;

        a:not(:hover):not(:active) {
          border-left-color: var(--cmpn_link);
          color: $c_black;
        }

        a:hover {
          background-color: $c_truewhite;
          border-left-color: var(--cmpn_hover);
        }

        a:active {
          background-color: $c_truewhite;
          border-left-color: var(--cmpn_active);
        }

      }

    }

    .site-header-secondary {
      background: none;
      background-color: $c_white;

      a {
        font-size: 1rem;
      }

    }

    .article-progress-bar {
      background: linear-gradient(90deg, var(--cmpn_paleteal) 0, var(--cmpn_teal) 100%);
    }

  }

  main {
    padding-top: $header_height + 1;

    @media #{$mq_lg} {
      padding-top: $header_height + 1;
    }

  }

  // Page Content
  .article-content {

    .entry-header {
      background-color: var(--cmpn_paleteal);

      .inner-wrapper {
        display: flex;
      }

      .title-container {
        align-items: center;
        background: none;
        background-color: var(--cmpn_paleteal);
        clip-path: polygon(0 0%,100% 0,90% 100%,0 100%);
        display: flex;
        height: 100%;
        position: absolute;
        top: 0;
        width: 50%;
        z-index: 1;

        @media #{$mq_lg} {
          width: 40%;
        }

      }

      .entry-title {
        font-size: 2em;

        @media #{$mq_lg} {
          font-size: 2.5em;
        }

      }

      a {
        // featured image wrapper
        left: 10%;
        margin-left: auto;
        position: relative;
        z-index: 0;

        @media #{$mq_lg} {
          left: 0;
        }

      }

      img {
        margin-right: 0;
      }

    }

    .entry-content {
      padding-bottom: 0;
      padding-left: 0;
      padding-right: 0;
      padding-top: 0;

      .inner-wrapper {
        background-color: $c_truewhite;
        padding-bottom: 2rem;
        padding-left: $gutter;
        padding-right: $gutter;
        padding-top: 2rem;

        @media #{$mq_lg} {
          padding-left: $gutter_lg;
          padding-right: $gutter_lg;
        }

      }

      b,
      em,
      strong {
        color: $c_trueblack;
      }

    }

  }

  // Footer
  .pre-footer {
    text-align: center;

    .paid-for {
      background-color: var(--cmpn_paleteal);
      border-color: var(--cmpn_teal);
      border-style: solid;
      border-width: 1px;
      margin: 2rem auto;
    }

  }

  .site-footer {
    background-color: $c_white;
    border-width: 0;

    &::before {
      content: '';
    }

    section {
      border-width: 0;
    }

    .back-to-top {
      justify-content: flex-end;
    }

  }

}

